[package]
name = "rsvg_internals"
version = "0.0.1"
authors = ["Federico Mena Quintero <federico@gnome.org>"]
build = "build.rs"

[dependencies]
libc = "0.2"
#glib = "^0.1.3"
#glib-sys = "^0.3.4"
downcast-rs = "^1.0.0"
regex = "^0.2.1"
lalrpop-util = "0.13.1"
cssparser = "^0.18.2"
itertools = "0.7.4"

[dependencies.cairo-sys-rs]
version = "0.4.0"
#git = "https://github.com/gtk-rs/cairo.git"
#branch = "master"
#git = "https://github.com/federicomenaquintero/cairo.git"
#branch = "matrix-try-invert"
#git = "file:///home/federico/src/gtk-rs/cairo"
#features = ["png"]

[dependencies.cairo-rs]
version = "0.2.0"
#git = "https://github.com/gtk-rs/cairo.git"
#branch = "master"
#git = "file:///home/federico/src/gtk-rs/cairo"
#features = ["png"]

[dependencies.glib]
version = "0.3.0"
#git = "https://github.com/gtk-rs/glib.git"
#branch = "master"

[dependencies.glib-sys]
version = "0.4.0"
#git = "https://github.com/gtk-rs/sys"
#branch = "master"

[build-dependencies.lalrpop]
version = "0.13.1"

[lib]
name = "rsvg_internals"
crate-type = ["staticlib"]

[profile.release]
lto = true
