[package]
name = "rsvg_internals"
version = "0.0.1"
authors = ["Federico Mena Quintero <federico@gnome.org>"]

[dependencies]
libc = "0.2"
downcast-rs = "^1.0.0"
regex = "^0.2.1"
itertools = "0.7.4"
pango = "0.3.0"
pango-sys = "0.5.0"
cssparser = "^0.22.1"

[dependencies.cairo-sys-rs]
version = "0.5.0"
#git = "https://github.com/gtk-rs/cairo.git"
#branch = "master"
#git = "https://github.com/federicomenaquintero/cairo.git"
#branch = "matrix-try-invert"
#git = "file:///home/federico/src/gtk-rs/cairo"
#features = ["png"]

[dependencies.cairo-rs]
version = "0.3.0"
#git = "https://github.com/gtk-rs/cairo.git"
#branch = "master"
#git = "file:///home/federico/src/gtk-rs/cairo"
#features = ["png"]

[dependencies.glib]
version = "0.4.0"
#git = "https://github.com/gtk-rs/glib.git"
#branch = "master"

[dependencies.glib-sys]
version = "0.5.0"
#git = "https://github.com/gtk-rs/sys"
#branch = "master"

[lib]
name = "rsvg_internals"
crate-type = ["staticlib"]

[profile.release]
lto = true
